Setup new deployment config